test/errors/functions/params_default_error.hy
// EXPECT_OUTPUT: cannot declare a default value
int bad(params int[] values = 0)
{
    return 0
}
